@@ -1,14 +1,14 @@
 parse error: syntax error
 parser stacks:
 state	value
-0	(node_list): (template-formal-decl) ... [3:10..41]
+0	(template-formal-decl-list-pair) [3:10..41]
 30	keyword: defproc [4:1..7]
-109	identifier: barbar [4:9..14]
-174	(node_list): ... [4:15..16]
-245	{ [4:18]
-282	(null) 
-225	$end
-in state 225, possible rules are:
+113	identifier: barbar [4:9..14]
+183	(node_list): ... [4:15..16]
+256	{ [4:18]
+291	(null) 
+234	$end
+in state 234, possible rules are:
 	type_alias: optional_template_specification . TYPEDEF physical_type_ref ID ';'  (24)
 acceptable tokens are: 
 	TYPEDEF (shift)
